@@ -9,6 +9,11 @@ Changes in stable release 2.4.18 (not released yet)
 * Security patch in fvwmbug.sh.
   See http://securitytracker.com/alerts/2004/Jan/1008781.html
 
+* Security fixes in
+    fvwm-menu-directory (BugTraq id 9161)
+    fvwm_make_directory_menu.sh
+    fvwm_make_browse_menu.sh
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.17 (10-Oct-2003)
